--- a/index.html
+++ b/index.html
@@ -4,31 +4,142 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Inicio - Travel Agent</title>
-    <link rel="stylesheet" href="estilos/styles.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="estilos/stylesdesign.css" />
   </head>
   <body>
     <header>
-      <nav>
-        <ul class="menu">
-          <li><a href="index.html" class="active">Inicio</a></li>
-          <li><a href="destinos.html">Destinos</a></li>
-          <li><a href="hoteles.html">Hoteles</a></li>
-          <li><a href="contacto.html">Contacto</a></li>
-        </ul>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Elitescapes</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" href="index.html"> Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="destinos.html"> Destinos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="hoteles.html"> Hoteles</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contacto.html"> Contacto</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="login.html"> Login</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="registro.html"> Registro</a>
+            </li>
+          </ul>
+        </div>
       </nav>
     </header>
 
-    <div class="hero">
-      <div>
-        <h1>Explora el Mundo con Nosotros</h1>
-        <p>Descubre destinos increíbles y planifica el viaje de tus sueños.</p>
-        <a href="registro.html" class="btn-registro">¡Regístrate!</a>
-        <a href="login.html" class="btn-registro">!Login!</a>
+    <div
+      id="carouselExampleAutoplaying"
+      class="carousel slide"
+      data-bs-ride="carousel"
+    >
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img
+            src="Imagenes/california3.jpg"
+            class="d-block w-100"
+            alt="California"
+          />
+        </div>
+        <div class="carousel-item">
+          <img src="Imagenes/disney2.jpg" class="d-block w-100" alt="Disney" />
+        </div>
+        <div class="carousel-item">
+          <img src="Imagenes/espana3.jpg" class="d-block w-100" alt="España" />
+        </div>
+      </div>
+      <button
+        class="carousel-control-prev"
+        type="button"
+        data-bs-target="#carouselExampleAutoplaying"
+        data-bs-slide="prev"
+      >
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button
+        class="carousel-control-next"
+        type="button"
+        data-bs-target="#carouselExampleAutoplaying"
+        data-bs-slide="next"
+      >
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+
+    <div class="container text-center my-5">
+      <h1>Explora el Mundo con Nosotros</h1>
+      <p>Descubre destinos increíbles y planifica el viaje de tus sueños.</p>
+      <a href="registro.html" class="btn btn-dark btn-lg mx-2">Regístrate</a>
+      <a href="login.html" class="btn btn-light btn-lg mx-2 border border-dark"
+        >Login</a
+      >
+    </div>
+
+    <div class="container photo-grid">
+      <div class="row g-4">
+        <!-- g-4 agrega espaciado entre filas y columnas -->
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+          <img
+            src="Imagenes/california2.jpg"
+            alt="California"
+            class="img-fluid"
+          />
+        </div>
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+          <img src="Imagenes/disney3.jpeg" alt="Disney" class="img-fluid" />
+        </div>
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+          <img src="Imagenes/espana1.jpg" alt="España" class="img-fluid" />
+        </div>
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+          <img src="Imagenes/canadao1.jpg" alt="Italia" class="img-fluid" />
+        </div>
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+          <img src="Imagenes/japon2.jpg" alt="Japón" class="img-fluid" />
+        </div>
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+          <img src="Imagenes/filipinas1.jpg" alt="New York" class="img-fluid" />
+        </div>
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+          <img src="Imagenes/peru2.jpg" alt="New York" class="img-fluid" />
+        </div>
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+          <img src="Imagenes/turquia3.jpg" alt="New York" class="img-fluid" />
+        </div>
       </div>
     </div>
 
-    <footer class="text-center py-3 mt-4">
+    <footer class="text-center py-3 mt-4 bg-light">
       <p>&copy; 2024 Travel Agent. Todos los derechos reservados.</p>
     </footer>
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
