--- a/hoteles.html
+++ b/hoteles.html
@@ -1,98 +1,159 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Cadenas Hoteleras de Lujo</title>
-<link rel="stylesheet" href="estilos/styles.css">
-</head>
-<body>
-<header>
-    <nav>
-        <ul class="menu">
-            <li><a href="index.html">Inicio</a></li>
-            <li><a href="destinos.html">Destinos</a></li>
-            <li><a href="hoteles.html" class="active">Hoteles</a></li>
-            <li><a href="contacto.html">Contacto</a></li>
-        </ul>
-    </nav>
-</header>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Cadenas Hoteleras de Lujo</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="estilos/stylehotels.css" />
+  </head>
+  <body>
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Elitescapes</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" href="index.html"> Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="destinos.html"> Destinos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="hoteles.html"> Hoteles</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contacto.html"> Contacto</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="login.html"> Login</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="registro.html"> Registro</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
 
-<div class="row">
-    <div class="left">
-        <h2>Cadenas Hoteleras</h2>
-        <input type="text" id="search" class="form-control mb-3" placeholder="Buscar cadena hotelera...">
-        <ul id="myMenu" class="list-group">
-        </ul>
+    <div class="container mt-4">
+      <div class="row">
+        <div class="left">
+          <h2>Cadenas Hoteleras</h2>
+          <input
+            type="text"
+            id="search"
+            class="form-control mb-3"
+            placeholder="Buscar cadena hotelera..."
+          />
+          <ul id="myMenu" class="list-group"></ul>
+        </div>
+
+        <!-- Right column with hotel chain information -->
+        <div class="right" id="contentArea">
+          <h2>Información de la Cadena Hotelera</h2>
+          <p>Selecciona una cadena hotelera del menú para ver más detalles.</p>
+        </div>
+      </div>
     </div>
 
-    <div class="right" id="contentArea">
-      <h2>Información de la Cadena Hotelera</h2>
-      <p>Selecciona una cadena hotelera del menú para ver más detalles.</p>
-  </div>  
+    <script>
+      fetch("datahoteles.xml")
+        .then((response) => response.text())
+        .then((data) => {
+          const parser = new DOMParser();
+          const xmlDoc = parser.parseFromString(data, "application/xml");
+          const hoteles = xmlDoc.getElementsByTagName("hotel");
+          const menu = document.getElementById("myMenu");
 
-<script>
-    fetch('datahoteles.xml')
-        .then(response => response.text())
-        .then(data => {
-            const parser = new DOMParser();
-            const xmlDoc = parser.parseFromString(data, 'application/xml');
-            const hoteles = xmlDoc.getElementsByTagName('hotel');
-            const menu = document.getElementById('myMenu');
+          menu.innerHTML = "";
 
-            menu.innerHTML = '';
+          Array.from(hoteles).forEach((hotel) => {
+            const id = hotel.querySelector("id").textContent;
+            const nombre = hotel.querySelector("nombre").textContent;
 
-            Array.from(hoteles).forEach(hotel => {
-                const id = hotel.querySelector('id').textContent;
-                const nombre = hotel.querySelector('nombre').textContent;
-
-                const li = document.createElement('li');
-                li.innerHTML = `<a href="#" onclick="showContent('${id}')">${nombre}</a>`;
-                li.classList.add('list-group-item');
-                menu.appendChild(li);
-            });
+            const li = document.createElement("li");
+            li.innerHTML = `<a href="#" onclick="showContent('${id}')">${nombre}</a>`;
+            li.classList.add("list-group-item");
+            menu.appendChild(li);
+          });
         })
-        .catch(error => console.error('Error al cargar el archivo XML:', error));
+        .catch((error) =>
+          console.error("Error al cargar el archivo XML:", error)
+        );
 
-    function showContent(id) {
-        fetch('datahoteles.xml')
-            .then(response => response.text())
-            .then(data => {
-                const parser = new DOMParser();
-                const xmlDoc = parser.parseFromString(data, 'application/xml');
-                const hotel = Array.from(xmlDoc.getElementsByTagName('hotel')).find(h => h.querySelector('id').textContent === id);
+      function showContent(id) {
+        fetch("datahoteles.xml")
+          .then((response) => response.text())
+          .then((data) => {
+            const parser = new DOMParser();
+            const xmlDoc = parser.parseFromString(data, "application/xml");
+            const hotel = Array.from(xmlDoc.getElementsByTagName("hotel")).find(
+              (h) => h.querySelector("id").textContent === id
+            );
 
-                if (hotel) {
-                    const nombre = hotel.querySelector('nombre').textContent;
-                    const descripcion = hotel.querySelector('descripcion').textContent;
-                    const imagen = hotel.querySelector('imagen') ? hotel.querySelector('imagen').textContent : '';
-                    const link = hotel.querySelector('link') ? hotel.querySelector('link').textContent : '#';
+            if (hotel) {
+              const nombre = hotel.querySelector("nombre").textContent;
+              const descripcion =
+                hotel.querySelector("descripcion").textContent;
+              const imagen = hotel.querySelector("imagen")
+                ? hotel.querySelector("imagen").textContent
+                : "";
+              const link = hotel.querySelector("link")
+                ? hotel.querySelector("link").textContent
+                : "#";
 
-                    const contentArea = document.getElementById('contentArea');
-                    contentArea.innerHTML = `
-                        <div>
-                            <h2>${nombre}</h2>
-                            ${imagen ? `<img src="${imagen}" alt="${nombre}">` : ''}
-                            <p>${descripcion}</p>
-                            <a href="${link}" target="_blank" class="btn-registro">Visitar sitio oficial</a>
-                        </div>
-                    `;
-                }
-            })
-            .catch(error => console.error('Error al mostrar contenido:', error));
-    }
+              const contentArea = document.getElementById("contentArea");
+              contentArea.innerHTML = `
+                <div>
+                  <h2>${nombre}</h2>
+                  ${
+                    imagen
+                      ? `<img src="${imagen}" class="hotel-image" alt="${nombre}">`
+                      : ""
+                  }
+                  <p>${descripcion}</p>
+                  <a href="${link}" target="_blank" class="btn btn-primary">Visitar sitio oficial</a>
+                </div>
+              `;
+            }
+          })
+          .catch((error) =>
+            console.error("Error al mostrar contenido:", error)
+          );
+      }
 
-    // Filtro de búsqueda
-    document.getElementById('search').addEventListener('keyup', function () {
+      // Filtro de búsqueda
+      document.getElementById("search").addEventListener("keyup", function () {
         const filter = this.value.toUpperCase();
-        const items = document.querySelectorAll('#myMenu li');
+        const items = document.querySelectorAll("#myMenu li");
 
-        items.forEach(item => {
-            const text = item.textContent || item.innerText;
-            item.style.display = text.toUpperCase().includes(filter) ? '' : 'none';
+        items.forEach((item) => {
+          const text = item.textContent || item.innerText;
+          item.style.display = text.toUpperCase().includes(filter)
+            ? ""
+            : "none";
         });
-    });
-</script>
+      });
+    </script>
 
-</body>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  </body>
 </html>
