--- a/destinos.html
+++ b/destinos.html
@@ -4,100 +4,141 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Destinos - Travel Agent</title>
-    <link rel="stylesheet" href="estilos/styles.css" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css" rel="stylesheet">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="estilos/styledestinos.css" />
   </head>
   <body>
     <header>
-      <nav>
-        <ul class="menu">
-          <li><a href="index.html">Inicio</a></li>
-          <li><a href="destinos.html" class="active">Destinos</a></li>
-          <li><a href="hoteles.html">Hoteles</a></li>
-          <li><a href="contacto.html">Contacto</a></li>
-        </ul>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Elitescapes</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" href="index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="destinos.html">Destinos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="hoteles.html">Hoteles</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contacto.html">Contacto</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="login.html">Login</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="registro.html">Registro</a>
+            </li>
+          </ul>
+        </div>
       </nav>
     </header>
-    
-  <main class="container my-4">
-    <h1 class="text-center mb-4">Nuestros Destinos</h1>
-    <div id="destinos-container" class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
-      <!-- Aquí se generará el contenido dinámico -->
-    </div>
-  </main>
 
-  <footer class="bg-dark text-white text-center py-3">
-    <p>&copy; 2024 Travel Agent</p>
-  </footer>
+    <main class="container my-4">
+      <h1 class="text-center mb-4">Nuestros Destinos</h1>
+      <div
+        id="destinos-container"
+        class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4"
+      >
+        <!-- Aquí se generará el contenido dinámico -->
+      </div>
+    </main>
 
-  <script>
-    document.addEventListener("DOMContentLoaded", () => {
-      // Cargar el XML de destinos
-      fetch("destinos.xml")
-        .then((response) => response.text())
-        .then((data) => {
-          const parser = new DOMParser();
-          const xmlDoc = parser.parseFromString(data, "application/xml");
-          const destinos = xmlDoc.getElementsByTagName("destino");
-          const destinosContainer = document.getElementById("destinos-container");
+    <footer class="bg-dark text-white text-center py-3">
+      <p>&copy; 2024 Travel Agent</p>
+    </footer>
 
-          // Generar contenido dinámico
-          Array.from(destinos).forEach((destino, index) => {
-            const nombre = destino.querySelector("nombre").textContent;
-            const descripcion = destino.querySelector("descripcion").textContent;
-            const imagenes = destino.querySelectorAll("imagen");
+    <script>
+      document.addEventListener("DOMContentLoaded", () => {
+        // Cargar el XML de destinos
+        fetch("destinos.xml")
+          .then((response) => response.text())
+          .then((data) => {
+            const parser = new DOMParser();
+            const xmlDoc = parser.parseFromString(data, "application/xml");
+            const destinos = xmlDoc.getElementsByTagName("destino");
+            const destinosContainer =
+              document.getElementById("destinos-container");
 
-            // Crear contenedor del destino
-            const destinoDiv = document.createElement("div");
-            destinoDiv.classList.add("col");
-            destinoDiv.innerHTML = `
-              <div class="destino card shadow-sm">
-                <div class="card-header destino-titulo" onclick="toggleDetails(${index})">
-                  ${nombre}
-                </div>
-                <div class="card-body destino-detalles" id="destino-${index}" style="display: none;">
-                  <p class="card-text">${descripcion}</p>
-                  <div class="slideshow-container position-relative">
-                    ${Array.from(imagenes)
-                      .map(
-                        (img, i) =>
-                          `<div class="mySlides-${index}" style="display: ${
-                            i === 0 ? "block" : "none"
-                          };">
-                            <img src="${img.textContent}" alt="${nombre}" class="img-fluid">
-                          </div>`
-                      )
-                      .join("")}
-                    <button class="prev position-absolute top-50 start-0 translate-middle-y" onclick="plusSlides(${index}, -1)">
-                      <i class="bi bi-chevron-left"></i>
-                    </button>
-                    <button class="next position-absolute top-50 end-0 translate-middle-y" onclick="plusSlides(${index}, 1)">
-                      <i class="bi bi-chevron-right"></i>
-                    </button>
+            // Generar contenido dinámico
+            Array.from(destinos).forEach((destino, index) => {
+              const nombre = destino.querySelector("nombre").textContent;
+              const descripcion =
+                destino.querySelector("descripcion").textContent;
+              const imagenes = destino.querySelectorAll("imagen");
+
+              // Crear contenedor del destino
+              const destinoDiv = document.createElement("div");
+              destinoDiv.classList.add("col");
+              destinoDiv.innerHTML = `
+                <div class="destino card shadow-sm">
+                  <div class="card-body">
+                    <div class="destino-titulo">${nombre}</div>
+                    <div class="destino-detalles">
+                      <p>${descripcion}</p>
+                    </div>
+                    <div class="slideshow-container position-relative">
+                      ${Array.from(imagenes)
+                        .map(
+                          (img, i) =>
+                            `<div class="mySlides-${index}" style="display: ${
+                              i === 0 ? "block" : "none"
+                            };">
+                              <img src="${
+                                img.textContent
+                              }" alt="${nombre}" class="img-fluid">
+                            </div>`
+                        )
+                        .join("")}
+                      <button class="prev position-absolute top-50 start-0 translate-middle-y" onclick="plusSlides(${index}, -1)">
+                        <i class="bi bi-chevron-left"></i>
+                      </button>
+                      <button class="next position-absolute top-50 end-0 translate-middle-y" onclick="plusSlides(${index}, 1)">
+                        <i class="bi bi-chevron-right"></i>
+                      </button>
+                    </div>
                   </div>
                 </div>
-              </div>
-            `;
-            destinosContainer.appendChild(destinoDiv);
-          });
-        })
-        .catch((error) => console.error("Error al cargar destinos.xml:", error));
-    });
+              `;
+              destinosContainer.appendChild(destinoDiv);
+            });
+          })
+          .catch((error) =>
+            console.error("Error al cargar destinos.xml:", error)
+          );
+      });
 
-    function toggleDetails(index) {
-      const detalles = document.getElementById(`destino-${index}`);
-      detalles.style.display = detalles.style.display === "none" ? "block" : "none";
-    }
+      function plusSlides(slideshowIndex, n) {
+        const slides = document.querySelectorAll(`.mySlides-${slideshowIndex}`);
+        let slideIndex = Array.from(slides).findIndex(
+          (slide) => slide.style.display === "block"
+        );
+        slides[slideIndex].style.display = "none";
+        slideIndex = (slideIndex + n + slides.length) % slides.length;
+        slides[slideIndex].style.display = "block";
+      }
+    </script>
 
-    function plusSlides(slideshowIndex, n) {
-      const slides = document.querySelectorAll(`.mySlides-${slideshowIndex}`);
-      let slideIndex = Array.from(slides).findIndex((slide) => slide.style.display === "block");
-      slides[slideIndex].style.display = "none";
-      slideIndex = (slideIndex + n + slides.length) % slides.length;
-      slides[slideIndex].style.display = "block";
-    }
-  </script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-</body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  </body>
 </html>
